          populated.
        * Renamed Test::Class::Moose::Report::Method->instance_report method
          to instance. This is a better match for other report-related
          methods, which don't include a "_report" suffix.
        * Removed the long-deprecated tests_run methods from TCM::Report and
          TCM::Report::Method.

0.62 2015-08-30
        * Make Test::Class::Moose::Config load Test::Builder. It used this
          module without loading it, which could cause issues if nothing else
          loaded it. Fixed by Andy Jack. (GitHub PR #55).

0.61 2015-08-15
        * Added a randomize_classes attribute which can be passed to
          Test::Class::Moose::Runner. Implemented by Andy Jack. GitHub PR #53.
        * Test::Class::Moose::Role now enables strict and warnings in the
          caller just like Test::Class::Moose does. GitHub PR #54.
        * Documented the current_instance and current_method methods for
          Test::Class::Moose::Report. The current_instance method was formerly
          named current_class, which is now deprecated, but still
          works. Addresses GitHub #51.
        * This distro now uses Package::DeprecationManager to generate
          deprecation warnings. See Test::Class::Moose::Deprecated for
          details.

0.60 2015-07-06
        * Doc updates including fixing the bug reporting link and making sure
          the CONTRIBUTORS section is up to date.

0.59 2015-07-06
        * Allow _constructor_parameter_sets to return an empty
          list. Implemented by Philipp Gortan. (GitHub issue #47)
        * Error messages when Test::Class::Moose::Load cannot load a module
          now include stack traces. (GitHub issue #43)

0.58 2014-09-05
        * Add a passed() method to class and method report objects (GitHub issue #30)
        * If a test class did not run (such as an abstract class), the time()
          method on reports now returns a zero duration time instead of
          undef (GitHub issue #34)
