@@ -21,6 +21,8 @@ Revision history for Perl distribution Test-Class-Moose
           methods, which don't include a "_report" suffix.
         * Removed the long-deprecated tests_run methods from TCM::Report and
           TCM::Report::Method.
+        * Removed the long-deprecated tests_run methods from
+          TCM::Report::Method->add_to_plan method.
 
 0.62 2015-08-30
         * Make Test::Class::Moose::Config load Test::Builder. It used this
